# djereo

./: .commitlintrc.ts  .copier-answers.yml  .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .release-please-config.json  404.html  CHANGELOG.md  README.md  copier.yaml  index.html  justfile  noxfile.py  prek.toml  pyproject.toml  search.html  sitemap.xml
.github/actions/publish-docs/: action.yaml
.github/actions/test/: action.yaml
.github/workflows/: _checks.yaml  ci.yaml  ci.yaml.jinja  pr.yaml  pr.yaml.jinja  release-please.yaml
develop/: index.html
docs/: README-dev.md  README-mkdocs.md  justfile  mkdocs.yml  pyproject.toml
docs/src/: develop.md  featurelist.md  index.md  quickstart.md
docs/src/css/: extra.css
featurelist/: index.html
quickstart/: index.html
search/: search_index.json
template/: .env.in.jinja  .env.test.jinja  .markdownlint-cli2.yaml.jinja  .pre-commit-config.yaml.jinja  README.md.jinja  biome.jsonc  justfile.jinja  manage.py.jinja  noxfile.py  noxfile.py.jinja  prek.toml.jinja  pyproject.toml.jinja  setup.sql.jinja  {%if is_github_project%}.release-please-config.json{%endif%}.jinja
template/_db/: manage_db.py.jinja  set_up.sql.jinja  set_up_db.py.jinja  tear_down.sql.jinja
template/_deploy/: .env.deploy.jinja  deploy.Dockerfile.dockerignore.jinja  deploy.Dockerfile.jinja  gunicorn.conf.py
template/accounts/: admin.py  forms.py
template/accounts/migrations/: max_migration.txt
template/core/: admin.py.jinja  apps.py.jinja  checks.py.jinja  context_processors.py.jinja  middleware.py
template/core/management/commands/: seed_database.py
template/core/templates/: _base.html.jinja  index.html.jinja
template/core/templates/admin/: base.html.jinja
template/core/tests/: test_admin.py.jinja  test_checks.py.jinja  test_context_processors.py.jinja  test_logging.py.jinja  test_middleware.py.jinja  test_models.py.jinja  test_templates.py.jinja
template/core/tests/management/commands/: test_seed_database.py.jinja
template/core/tests/test_app/: apps.py.jinja  models.py.jinja
template/core/tests/test_app/migrations/: 0001_initial.py.jinja
template/db/: set_up.sql.jinja  tear_down.sql.jinja
template/docs/: README-dev.md.jinja
template/tests/: conftest.py.jinja  test_migrations.py
template/tests/{{project_name}}/: test_checks.py.jinja  test_{{project_name}}.py.jinja
template/tests_e2e/: conftest.py  test_accessibility.py  test_auth.py
template/users/: admin.py  apps.py.jinja  factories.py  models.py  models.py.jinja  signals.py
template/users/migrations/: 0001_initial.py.jinja  0002_userprofile.py.jinja  0003_alter_authuser_manager.py.jinja
template/users/tests/: test_factories.py  test_models.py  test_signals.py
template/users/tests/django_allauth/: test_adapter.py
template/{%if is_github_project%}.github{%endif%}/actions/containerise/: action.yaml
template/{%if is_github_project%}.github{%endif%}/actions/django-checks/: action.yaml
template/{%if is_github_project%}.github{%endif%}/actions/prek/: action.yaml
template/{%if is_github_project%}.github{%endif%}/actions/service-health/: action.yaml
template/{%if is_github_project%}.github{%endif%}/actions/test/: action.yaml
template/{%if is_github_project%}.github{%endif%}/workflows/: _playwright_axe.yaml.jinja  _playwright_e2e.yaml.jinja  _pre-build-checks.yaml  _pre-build-checks.yaml.jinja  ci.yaml  ci.yaml.jinja  on-tag.yaml.jinja  pr.yaml  pr.yaml.jinja  release-please.yaml
template/{{project_name}}/: admin.py  admin.py.jinja  apps.py.jinja  asgi.py.jinja  checks.py.jinja  context_processors.py.jinja  logging.py  main.py.jinja  models.py  models.py.jinja  settings.py.jinja  test.py.jinja  urls.py.jinja  wsgi.py.jinja
template/{{project_name}}/management/commands/: seed_database.py
template/{{project_name}}/templates/: _base.html.jinja  index.html  index.html.jinja
template/{{project_name}}/tests/: test_admin.py.jinja  test_context_processors.py.jinja  test_logging.py.jinja  test_middleware.py.jinja  test_models.py.jinja  test_templates.py.jinja
template/{{project_name}}/tests/management/commands/: test_seed_database.py  test_seed_database.py.jinja
template/{{project_name}}/tests/test_app/: apps.py.jinja  models.py.jinja
template/{{project_name}}/tests/test_app/migrations/: 0001_initial.py  0001_initial.py.jinja
tests/: _clean_up_databases.sql  _utils.py  conftest.py  test_generate_from_template.py  test_integration.py  test_post_copy_tasks.py  test_test_migrations.py  test_validators.py
