[project]
name = "djereo"
version = "3.15.0"
description = ""
authors = [
    {name = "Alberto Morón Hernández", email = "alberto.moronh@gmail.com"}
]
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.2.0,<10.0.0",
]

[dependency-groups]
test = [
    "beautifulsoup4>=4.12.3",
    "copier>=9.4.1",
    "pip>=24.3.1",
    "pre-commit>=4.2.0",
    "pytest>=8.3.3,<9.0.0",
    "pytest-randomly>=4.0.1,<5.0.0",
    "pytest-xdist>=3.8.0,<5.0.0",
    "pyyaml>=6.0.2",
    "sh>=2.2.1,<3.0.0",
]

[project.urls]
Changelog = "https://github.com/albertomh/djereo/blob/main/CHANGELOG.md"
Documentation = "https://albertomh.github.io/djereo/"
Repository = "https://github.com/albertomh/djereo"

[tool.setuptools.packages.find]
# allow `pip install -e .` to find the project package
include = ["djereo"]

[tool.pytest.ini_options]
addopts = "--pdbcls=IPython.terminal.debugger:Pdb"
markers = [
    "integration",
    "slow",
    "smoke",
    "unit",
]

[tool.ruff]
exclude = [".pdbrc"]
extend-exclude = ["*project_name*"]
force-exclude = true
indent-width = 4
line-length = 90
target-version = "py312"

[tool.ruff.lint]
ignore = []
select = [
    # flake8-bugbear
    "B",
    # pydocstyle
    "E",
    # isort
    "I",
    # flake8-no-pep420
    "INP",
    # Pyflakes
    "F",
    #flake8-logging-format
    "G",
    # flake8-logging
    "LOG",
    # flake8-bandit
    "S",
    # flake8-tidy-imports
    "TID",
    # flake8-print
    "T20",
    # pycodestyle warnings
    "W",
]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = ["S"]
"**/tests/**.py" = ["S"]
"**/tests_e2e/**.py" = ["S"]
